--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "mobx-react": "^5.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-flip-move": "^3.0.1"
+    "react-flip-move": "^3.0.1",
+    "zipcodes": "^6.0.0"
   },
   "devDependencies": {
     "custom-react-scripts": "0.2.1",
