--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "zipcodes": "^6.0.0"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^3.4.5",
-    "@storybook/addon-links": "^3.4.5",
-    "@storybook/addons": "^3.4.5",
+    "@storybook/addon-actions": "4.0.0-alpha.6",
+    "@storybook/addon-links": "4.0.0-alpha.6",
+    "@storybook/addon-viewport": "4.0.0-alpha.6",
+    "@storybook/addons": "4.0.0-alpha.6",
     "@storybook/react": "^3.4.5",
     "babel-core": "^6.26.3",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
